# macrofor

./: PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
docs/: API_SPEC.md  API_SPEC_single_instructions.md  ENV_SETUP.md  MACROFOR_CHEATSHEET.md  RT-0119-ocr.txt  diffusion_step.f90  fortran_style_demo.ipynb  helper.py  newton_dynamic.inc  newton_fractal_example.ipynb  newton_fractal_genfor.f90  newton_fractal_static.f90  newton_out.pgm  newton_out.ppm  oregonator_operator_splitting.ipynb  spec_genfor.txt  spec_macro_instructions.txt  spec_single_instructions.txt  write_ppm_p6.f90
macrofor/: __init__.py  api.py  ast.py  codegen.py
tests/: test_api_helpers.py  test_api_macro_functions.py  test_codegen.py  test_f77_indentation_and_labels.py  test_fortran_compatibility.py  test_genfor.py
tools/: clean_api_spec.py  extract_pdf.py  generate_cheatsheet.py  parse_api_from_text.py  structure_api_spec.py
